src/style.css
  /******** Fonts ********/
  @font-face {
    font-family: "Avenir";
    src: url(/public/Fonts/Avenir.ttc) format("truetype");
  }
  
  @font-face {
    font-family: "Helvetica";
    src: url(/public/Fonts/Helvetica.ttc) format("truetype");
  }
  
  @font-face {
    font-family: "HelveticaNeue";
    src: url(/public/Fonts/HelveticaNeue.ttc) format("truetype");
  }
  
  @font-face {
    font-family: "MyriadPro-Regular";
    src: url(/public/Fonts/MyriadPro-Regular.otf) format("opentype");
  }

  @font-face {
    font-family: "NeuzeitGrotesk-Light";
    src: url(/public/Fonts/DIN\ 30640\ Std\ Neuzeit\ Grotesk\ Light.otf) format("opentype");
  }

  @font-face {
    font-family: "NeuzeitGrotesk-Black";
    src: url(/public/Fonts/Neuzeit\ Grotesk\ Cond\ W01\ Black.otf) format("opentype");
  }

  @font-face {
    font-family: "NeuzeitGrotesk-Regular";
    src: url(/public/Fonts/Neuzeit\ Grotesk\ W01\ Regular.otf) format("opentype");
  }

  @font-face {
    font-family: "NeuzeitSBook";
    src: url(/public/Fonts/NeuzeitSBook.ttf) format("truetype");
  }

 /******** General ********/
  * {
    box-sizing: border-box;
  }

  body {
    font-family: "NeuzeitGrotesk-Regular";
    margin: 0;
    padding: 0;
    height: 100vh;
  }
  
  .container {
    margin: 0;
    text-align: center;
  }
  
  /******** Navbar ********/
  .nav {
    color: #364A37;
    background-color: white;
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    gap: 2rem;
    padding: 0 3rem;
    height: 5rem;
    position: sticky;
  }
  
  .title-logo {
    height: auto;
    width: 250px;
    padding-bottom: 0.3rem;
  }

  .nav ul {
    font-weight: 550;
    padding: 0;
    margin: 0;
    list-style: none;
    display: flex;
    gap: 1rem;
  }
  
  .nav a {
    color: inherit;
    text-decoration: none;
    height: 100%;
    display: flex;
    align-items: center;
    padding: .25rem;
  }

  .nav li {
    color: inherit;
    text-decoration: none;
    height: 100%;
    display: flex;
    align-items: center;
    padding: .25rem;
  }

  .navbar-link {
    color: #364A37;
    text-decoration: none;
    font-family: "NeuzeitGrotesk-Regular";
  }

  /******** Carousel ********/
  .slider-container {
    display: flex;
    flex-direction: row-reverse;
    height: 85vh;
    overflow: none;
    
  }

  /** imgs side **/
  .slider-img {
    width: 60%;
    height: 100%;    
  }

  .slider-img img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    align-items: flex-start;
  }
  
  /** text side **/
  .slider-color {
    flex-grow: 0;
    flex-direction: column;
    width: 40%;
    background-color:#364A37;
    align-items: left;

}

  .slider-text {
    margin: 3rem;
    font-size: 420%;
    color: white;
    text-align: left;
    
  }

  .btn-container {
    display: flex;
    margin: 3rem;
  }

  /******** Landing Cards ********/


  .landing-title-container {
    margin: 2rem;
  }

  .landing-cards-container {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    gap: 1rem;
    margin: 1rem;
  }

  .landing-cards {
    width: 100%;
  }

  .card-txt-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: auto;
    height: auto;
  }

  .landing-title-container p {
    text-align: left;
  }

  .cards-btn {
    display: flex;
    justify-content: center;
    margin-bottom: 2rem;
  }

  /******** Contact section ********/
  .contact-section {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    padding: 1rem;
    background-color: #364A37;
    color: white;
  }

  .contact-section h1 {
    color: #FAC136;
  }

  .contact-section-btn {
    display: flex;
    justify-content: center;
    margin: 2rem;
  }

  .contact-btn {
    width: auto;
  }

  /******** Accordion ********/

  .compaccordion-container {
    display: flex;
    flex-direction: row;
    overflow: none;
  }

  .accordion-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin-left: 5rem;
    margin-right: 5rem;
  }

  .accordion-text {
    text-align: left;
  }

  .img-accordion-container {
    display: flex;
    overflow: hidden;
    height: 100%;
  }

  .img-accordion-container img {
    width: 120%;
    height: fit-content;
  }

  /******** Graph ********/
  .graph-container {
    display: flex;
    height: auto;
    padding: 6rem;
    gap: 10rem;
    background-color: #364A37;
  }

  .graph-text-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .graph-container h1 {
    color: #FAC136;
    text-align: left;
  }

  .graph-container p {
    color: white;
    text-align: left;
  }

  .graph-img-container img {
    width: 20rem;
  }

  /******** Triple Div ********/

  .triplediv-container{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
  }

  .text-div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 4rem;
    width: 50%;
  }

  .text-div h1 {
    color: #364A37;
    text-align: left;
  }

  .img-div {
    display: flex;
    overflow: hidden;
    background-size:cover;
  }

  .img-div img {
    width: 25rem;
  }

  /******** Footer ********/
  .footer-container {
    display: flex;
    height: auto;
    justify-content:space-between;
    align-items: stretch;
    background-color: #364A37;
    gap: 7rem;
  }

  .footer-text-container {
    display: flex;
    justify-content: space-around;
    align-items: stretch;
    gap: 8rem;
    margin-right: 10rem;
  }

  .footer-section {
    text-align: left;
    list-style: none;
    color: white;
  }

  .footer-section ul {
    padding: 0;
    margin: 0;
    list-style: none;
  }

  .footer-section li {
    text-decoration: none;
    align-items: left;
  }

  .footer-section h3 {
    color: #FAC136;
    margin-top: 3rem;
    opacity: 60%;
  }

  .legal-footer h3 {
    opacity: 100%;
  }

  .legal-footer li {
    opacity: 50%;
  }

  .logo-footer img {
    width: 15rem;
    margin: 1rem;
  }


  /******** Services ********/
  .services-container {
    margin: 3rem;
  }

  /******** About ********/
  .about-container {
    margin: 3rem;
  }

